# roboGech

./: .gitignore  README.md
cad/: bin.SLDPRT  bracket-brace.DXF  bracket-brace.SLDPRT  bracket-stepper.DXF  bracket-stepper.SLDPRT  bracket-top.DXF  bracket-top.SLDPRT  center-piece.DXF  center-piece.SLDPRT  filter.DXF  filter.SLDPRT  panel1.DXF  panel1.SLDPRT  panel2.DXF  panel2.SLDPRT  panel3.DXF  panel3.SLDPRT  top-panel.DXF  top-panel.SLDPRT
circuitry/: System Schematic.sch
circuitry/libraries/: roboGech_devices.lbr
software/: CMakeLists.txt  SelfSortingBin  object_detection.cpp  object_detection.h  opencv_receiver.cpp
software/esp32_cam_firmware/: esp32_cam_firmware.ino
software/esp32_main_firmware/: esp32_main_firmware.ino
software/example/: opencv_example_receiver.py
software/example/opencv_example/: DisplayImage  opencv_example.ino
software/test_stepper_and_rgb_led/: test_stepper_and_rgb_led.ino
